--- a/appendix/asymm.tex
+++ b/appendix/asymm.tex
@@ -1,1 +1,1 @@
-In this section we construct a natural translation of our protocol to asymmetric groups and prove its security under a natural traslation of the PPA assumption to asymmetric groups.
+In this section we construct a natural translation of our protocol to asymmetric groups and prove its security under a natural translation of the PPA assumption to asymmetric groups.
