--- a/intro/chandran.tex
+++ b/intro/chandran.tex
@@ -1,5 +1,5 @@
 %!TeX root=../main_ring_signature.tex
-Our scheme follows the ring signature of Chandran et al. Consider a symmetric bilinear group $gk:=(\GG,\GG_T,e,\mathcal{P},q)$ of prime order $q$, where $\mathcal{P}$ is a generator. Define $[x]=x\mathcal{P}$ for any $x\in\mathbb{Z}_q$. Consider also a {Boneh-Boyen signature scheme} \cite{EC:BonBoy04a} whith secret/verification keys are of the form $(sk,[vk])$, where $sk$ is equal to $vk$. The validity of a Boneh-Boyen signature $[\sigma]\in\GG$ for a message $m\in\Z_q$ under the verification $[vk]$ corresponds to the satisfiability of an equation $\mathsf{eq}([\sigma],[vk],m)$ over the bilinear group. Thereby, one can prove possession of a valid signature, without revealing the signature, using Groth-Sahai proofs.\cite{EC:GroSah08}\footnote{We assume here some familiarity with the Groth-Sahai proof system. We provide a description of Groth-Sahai proofs on Section \ref{sec:gs-proofs}}\footnote{We could replace the Boneh-Boyen signature scheme with any structure preserving signature scheme secure under milder assumptions (e.g.~\cite{EPRINT:JutRoy17}). We rather keep it simple and stick to Boneh-Boyen signature which, since the verification key is just one group element, simplifies the notation and reduces the size of the final signature.}  Given also a {one-time signature scheme}, the signature of the message $m$ for a ring $R=\{[vk_1],\ldots,[vk_n]\}$ is computed as follows:
+Consider a {Boneh-Boyen signature scheme} \cite{EC:BonBoy04a} with secret/verification keys are of the form $(sk,[vk])$, where $sk$ is equal to $vk$. The validity of a Boneh-Boyen signature $[\sigma]\in\GG$ for a message $m\in\Z_q$ under the verification $[vk]$ corresponds to the satisfiability of an equation $\mathsf{eq}([\sigma],[vk],m)$ over the bilinear group. Thereby, one can prove possession of a valid signature, without revealing the signature, using Groth-Sahai proofs.\cite{EC:GroSah08}\footnote{We assume here some familiarity with the Groth-Sahai proof system. We provide a description of Groth-Sahai proofs on Section \ref{sec:gs-proofs}}\footnote{We could replace the Boneh-Boyen signature scheme with any structure preserving signature scheme secure under milder assumptions (e.g.~\cite{EPRINT:JutRoy17}). We rather keep it simple and stick to Boneh-Boyen signature which, since the verification key is just one group element, simplifies the notation and reduces the size of the final signature.}  Given also a {one-time signature scheme}, the signature of the message $m$ for a ring $R=\{[vk_1],\ldots,[vk_n]\}$ is computed as follows:
 \begin{itemize}
 	\item[a)] Pick a one-time signature key $(sk_\mathsf{ot},vk_\mathsf{ot})$, sign $m$ with $sk_\mathsf{ot}$, and sign $vk_\mathsf{ot}$ with $sk$.
 	\item[b)] Show possession of valid signature of $vk_\mathsf{ot}$ under $[vk]$ using Groth-Sahai proofs.
