--- a/prelim/prelim.tex
+++ b/prelim/prelim.tex
@@ -5,10 +5,10 @@ and $\GG_T$ are groups of prime order $q$, the element $\mathcal{P}$ is a genera
 $\GG$, and $e:\GG\times\GG\to\GG_T$ is an efficiently computable and non-degenerated bilinear map.
 
 Elements in $\GG$ are denoted implicitly as $[a]:=a \Pt$, where $a\in\Z_q$, and elements in $\GG_T$ are denoted as $[a]_T:=a\Pt$, where $\Pt_T:=e(\Pt,\Pt)$. 
-The pairing operation iso written as a product $\cdot$, that is $[a] \cdot [b]=[a] [b]=e([a],[b])=[ab]_T$. Vectors and matrices are denoted in boldface. Given a matrix $\matr{T}=(t_{i,j})$, $[\matr{T}]$ is
+The pairing operation is written as a product $\cdot$, that is $[a] \cdot [b]=[a] [b]=e([a],[b])=[ab]_T$. Vectors and matrices are denoted in boldface. Given a matrix $\matr{T}=(t_{i,j})$, $[\matr{T}]$ is
 the natural embedding of $\matr{T}$ in $\GG$, that is, the matrix whose $(i,j)$th entry is $t_{i,j}\mathcal{P}$. Given a matrix $\matr{S}$ with the same number of rows as $\matr{T}$, we define $\matr{S}\cat\matr{T}$ as the concatenation of $\matr{S}$ and $\matr{T}$.
 
-We recall the definition of the decisional linear assumption (in matricial notation) and the kernel matrix Diffie-Hellman assumption.
+We recall the definition of the decisional linear assumption (in matrix notation) and the kernel matrix Diffie-Hellman assumption.
 
 \begin{definition}[Decisional Diffie-Hellman Assumption (DLin)]\label{def:dlin}
  Let  $\gk 
