--- a/intro/introduction.tex
+++ b/intro/introduction.tex
@@ -37,7 +37,7 @@ We consider also the family of collision resistant hash functions parametrized b
 g_{[\matr{A}]} : \GG^m &\to \GG^2\\
            [\vecb{x}] &\mapsto g_{[\matr{A}]}([\vecb{x}]) = [\matr{A}\vecb{x}]
 \end{align*}
-Given $[\matr{A}],[\matr{A}']\in\GG^{2\times m}$ define $A,A'$ as the sets whose elements are the columns of, respectively, $[\matr{A}]$ and $[\matr{A}']$. Then $g_{[\matr{A}]}([\vecb{x}]) = g_{[\matr{A}']}([\vecb{x}'])$ and $A=A'$ implies that there is a permutation $\pi$ such that $[\vecb{x}],\pi([\vecb{x}'])$ is a collision for $g_{[\matr{A}]}$.
+Given $[\matr{A}],[\matr{A}']\in\GG^{2\times m}$ define $A,A'$ as the sets whose elements are the columns of, respectively, $[\matr{A}]$ and $[\matr{A}']$. Then $g_{[\matr{A}]}([\vecb{x}]) = g_{[\matr{A}']}([\vecb{x}'])$ and $A=A'$ implies that there is a permutation $\pi$ such that $[\vecb{x}]=\pi([\vecb{x}'])$ unless $[\vecb{x}],\pi([\vecb{x}'])$ is a collision for $g_{[\matr{A}]}$.
  
  Finding collosions for $g_{[\matr{A}]}$ is as hard as finding a non-zero element in the kernel of $[\matr{A}]$, since
 $$
@@ -47,15 +47,16 @@ which is in general a hard problem.
 Morillo et al.~\cite{AC:MorRafVil16} formally defined this computational (or search) problem as the kernel matrix Diffie-Hellman assumption (KerMDH) and it has many applications such as constructing constant size QA-NIZK proofs of membership in the linear span of a matrix \cite{EC:LPJY14,EC:KilWee15}. Morillo et al. proved the hardness of the KerMDH assumption in generic bilinear groups for many distributions of $[\matr{A}]$, and for some specific distributions (e.g.~the uniform distribution) it can be proven harder than the decisional linear assumption. If $A$ is randomly chosen from $Q_m$, then finding an element on the kernel of $[\matr{A}]$ was proven hard in generic bilinear groups by Groth and Lu \cite{AC:GroLu07} (although using a different terminology).
 
 \subsubsection{High level description.}
-Our scheme follows the ring signature of Chandran et al.~and improves the underlying $\Theta(\sqrt{n})$ proof that the Groth-Sahai commitment of a Boneh-Boyen signature verification key $[vk]\in\GG$ belongs to the ring of verification keys $R=\{[vk_1],\ldots,[vk_n]\}$. We refer to this proof as ``Chandran et al.'s set-membership proof'' and we remark that it might be applied to any set of group elements (not only of verification keys).
+Our scheme follows the ring signature of Chandran et al.~and improves the underlying $\Theta(\sqrt{n})$ proof that the Groth-Sahai commitment of a Boneh-Boyen signature verification key $[vk]\in\GG$ belongs to the ring of verification keys $R=\{[vk_1],\ldots,[vk_n]\}$. In the rest of this section we simply refer to this proof as a ``set-membership proof'' and we remark that it might be applied to any set of group elements (not only of verification keys).
 
-We enlarge the verification key by including $[\vecb{a}]\gets Q_1$ and $sk[\vecb{a}]=\vecb{a}[vk]$, where $[vk]$ is the verification key of Chandran et al.'s scheme and $sk=vk$ is the secret key (recall that $vk$ is the discrete logarithm of $[vk]$). In spite of this difference, our proof show that a Boneh-Boyen verification key $[vk]$ is in the ring. 
+We enlarge the verification key by including $[\vecb{a}]\gets Q_1$ and $sk[\vecb{a}]=\vecb{a}[vk]$, where $[vk]$ is the verification key of Chandran et al.'s scheme and $sk=vk$ is the secret key (recall that $vk$ is the discrete logarithm of $[vk]$). In spite of this difference, our proof also show that a Boneh-Boyen verification key $[vk]$ is in the ring. 
 
-Consider a Groth-Sahai commtiment to $[vk_i]$, $1\leq i\leq n$, and let $1\leq \mu\leq m^2, 1\leq \nu \leq m$  such that $i=(\mu-1)m + \nu$, where $m:=\sqrt[3]{n}$. We split the verification keys into $[\vecb{\kappa}_1],\ldots, [\vecb{\kappa}_{n^{2/3}}]$ such that $[\vecb{\kappa}_i] = ([vk_{(i-1)m+1}],\ldots,[vk_{im}])^\top\in\GG^m$ and also define $A_1,\ldots, A_{n^{2/3}}$, $[\matr{A}_1],\ldots, [\matr{A}_{n^{2/3}}]$ in a similar way.
-We use Chandran et al.'s set-membersip proof to show that the opening of a Groth-Sahai commitment $[\vecb{c}] = \GS.\Com_{ck}(h(A_ \mu))$ belongs the set $H:=\{h(A_1),\ldots,\allowbreak h(A_{n^{2/3}})\}$. Note that this set-membership proof requieres only $m$ group elements.
+Given the commitment of $[vk]=[vk_i]$, for some $1\leq i\leq n$, our proof consists of two set-mebership proofs in sets of size $\Theta(n^{2/3})$ (and thus each proof is of size $\Theta(\sqrt[3]{n})$) and $\Theta(\sqrt[3]{n})$ Groth-Sahai proofs and Groth-Sahai commitments. Let $1\leq \mu\leq m^2, 1\leq \nu \leq m$  such that $i=(\mu-1)m + \nu$, where $m:=\sqrt[3]{n}$. The prover and the verifier split the verification keys into $[\vecb{\kappa}_1],\ldots, [\vecb{\kappa}_{n^{2/3}}]$ such that $[\vecb{\kappa}_i] = ([vk_{(i-1)m+1}],\ldots,[vk_{im}])^\top\in\GG^m$ and also define $A_1,\ldots, A_{n^{2/3}}$, $[\matr{A}_1],\ldots, [\matr{A}_{n^{2/3}}]$ in a similar way.
+
+The prover starts commiting to $h(A_\mu)$ and computes the first set-membership proof showing that $h(A_\mu)$ belongs the set $H:=\{h(A_1),\ldots,\allowbreak h(A_{n^{2/3}})\}$. Note that this set-membership proof requieres only $m$ group elements.
 Let $[\matr{A}']$ the matrix whose first column is $[\vecb{a}_i]$ and the rest columns are the other columns of $[\matr{A}_\mu]$ (preserving the order). We indiviadually commit to each element of $A'=A_\mu$ and show using Groth-Sahai proofs that $A'\in Q_m$ and that $h(A')=h(A_\mu)$. From this part of the proof we get $m$ commitments to the elements of $A'$ and we know that, with all but negligible probability, $A'=A_\mu$.
 
-Next, we compute Groth-Sahai commitments to each element of the column vector $[\vecb{\kappa}']$, whose first elment is $[vk_i]$ and the rest are the other verification keys in $[\vecb{\kappa}_\mu]$, and we commit to $[\vecb{y}] := g_{[\matr{A_{\mu'}}]}([\vecb{\kappa}_{\mu'}])$. Then, we show using Chandran et al.'s set-membership proof that $[\vecb{y}]$ belongs to the set $G:=\{g_{[\matr{A}_1]}([\vecb{\kappa}_1]),\allowbreak\ldots,g_{[\matr{A}_{n^{2/3}}]}([\vecb{\kappa}_{n^{2/3}}])\}$. (We also need to show that $\mu'=\mu$, but this is proof is ``for free'' given the way Chandran et al.'s proof is constructed). Finally, we give a Groth-Sahai proof that $g_{[\matr{A}']}([\vecb{\kappa}'])=[\vecb{y}]=g_{[\matr{A}_\mu']}([\kappa_{\mu'}])$.
+Next, the prover computes Groth-Sahai commitments to each element of the vector $[\vecb{\kappa}']$, whose first element is $[vk_i]$ and the rest are the other verification keys in $[\vecb{\kappa}_\mu]$, and commits also to $g_{[\matr{A_{\mu'}}]}([\vecb{\kappa}_{\mu'}])$. The second set-membership proof shows that $g_{[\matr{A_{\mu'}}]}([\vecb{\kappa}_{\mu'}])$ belongs to the set $G:=\{g_{[\matr{A}_1]}([\vecb{\kappa}_1]),\allowbreak\ldots,g_{[\matr{A}_{n^{2/3}}]}([\vecb{\kappa}_{n^{2/3}}])\}$. (We also need to show that $\mu'=\mu$, which can be proven ``for free'' given the way Chandran et al.'s proof is constructed). Finally, the prover gives a Groth-Sahai proof that $g_{[\matr{A}']}([\vecb{\kappa}'])=g_{[\matr{A_{\mu'}}]}([\vecb{\kappa}_{\mu'}])$.
 
 We conclude that $[\vecb{\kappa}']$ is a permutation of $[\vecb{\kappa}_\mu]$ and thus $[\kappa'_1]=[vk_i]$ is in the ring of verification keys.
 
