--- a/main-ring-signature.tex
+++ b/main-ring-signature.tex
@@ -37,6 +37,10 @@
 \section{Preliminaries}
 
 	\input{prelim/prelim}
+
+	\subsection{Hardness Assumptions}
+
+	\input{prelim/assumptions}
         
 	\subsection{Groth-Sahai Proofs in the DLin Instantiation} \label{sec:gs-proofs}
         
@@ -58,8 +62,13 @@
 	
          \input{intro/chandran}
 
+	\subsection{Hash Functions}
+
+	\input{prelim/hash}
+
     \section{Our Construction}
 
+	\input{our-construction/hash}
 	%\subsection{High Level Description of our Construction}
         
         %\input{intro/high-level}
