--- a/intro/discussion.tex
+++ b/intro/discussion.tex
@@ -1,19 +1,23 @@
 \subsubsection{Extending our technique.}
-A natural question is if this technique can be applied once again. That is, to compute a $\Theta(\sqrt[4]{n})$  proof, compute commitments to an element from $S=\{\sum_{i=1}^{m}\vecb{a}_{i,1,1,1}[vk_{i,1,1,1}],\ldots,\sum_{i=1}^{m}\vecb{a}_{i,m,m,m}[vk_{i,m,m,m}]\}$ and $S'=\allowbreak\{\sum_{i=1}^{m}[\vecb{a}_{i,1,1,1}],\ldots,\sum_{i=1}^{m}[\vecb{a}_{i,m,m,m}]\}$, and then prove that they belong to the respective sets with our set-membership proof of size $\Theta(\sqrt[3]{n})$. Since $|S|=|S'|=n^{3/4}$, proof will be of size $\Theta(\sqrt[3]{n^{3/4}})=\Theta(\sqrt[4]{n})$. However, this is not possible since the $\Theta(\sqrt[3]{n})$ proof is not a set-membership proof for arbitrary sets but only for sets where each element is of the form $([vk],\vecb{a}[vk],[\vecb{a}])$. Clearly, elements from $S$ and $S'$ do not have this form.
+A natural question is if this technique can be applied once again. That is, to compute a $\Theta(\sqrt[4]{n})$  proof, compute commitments to an element from $H=\{h(A_1),\ldots,h(A_{n^{3/4}})\}$ and
+$G=\allowbreak\{
+	g_{[\matr{A_1}]}
+		([
+			\vecb{\kappa}_1]),
+	\ldots,\allowbreak
+	g_{[\matr{A}_{n^3/4}]}
+		([
+			\vecb{\kappa}_{n^{3/4}}
+])\}$,
+and then prove that they belong to the respective sets with our set-membership proof of size $\Theta(\sqrt[3]{n})$. Since $|H|=|G|=n^{3/4}$, the proof will be of size $\Theta(\sqrt[3]{n^{3/4}})=\Theta(\sqrt[4]{n})$. However, this is not possible since the $\Theta(\sqrt[3]{n})$ proof is not a set-membership proof for arbitrary sets but only for sets where each element is of the form $([vk],\vecb{a}[vk],[\vecb{a}])$. Clearly, elements from $H$ and $G'$ do not have this form.
 
 
 \subsubsection{Erasures.}
-In the security proof we need to embed an instance of the permutation pairing assumption on the verification keys. On the other hand, the adversary may adaptively corrupt parties obtaining all the random coins used to generate the verification key, which amounts to reveal $\vecb{a}$ (the discrete logs of $[\vecb{a}]$) and is incompatible with the permutation pairing assumption. Since is not clear how to obliviously sample $[x]$ and $[x^{2}]$ and we can only guess the set of corrupted parties with negligible probability, we are forced to use erasures. That is, after sampling $\vecb{a}\gets\mathcal{Q}$ and computing $[\vecb{a}]$, the key generation algorithm erases $\vecb{a}$.
+In the security proof we need to embed a random preimage $A=\{[\vecb{a}_1],\ldots,\allowbreak [\vecb{a}_{q_{\mathsf{gen}}}]\}$ of $h$ in the verification keys while, where $q_{\mathsf{gen}}$ is the total number of verification keys. On the other hand, the adversary may adaptively corrupt parties obtaining all the random coins used to generate the verification key. That is, we need to reveal $\vecb{a}_i$ (the discrete logs of $[\vecb{a}_i]$) to the adversary, which is incompatible with the permutation pairing assumption and thus with the security of $h$. Since is not clear how to obliviously sample $[\vecb{a}_i]=([a_{i,1}],[a_{i,1}^2])^\top$ and we can only guess the set of corrupted parties with negligible probability, we are forced to use erasures. That is, after sampling $\vecb{a}\gets\mathcal{Q}$ and computing $[\vecb{a}]$, the key generation algorithm erases $\vecb{a}$.
 
-\subsubsection{Getting rid of the non-standard assumptions.} Gonzalez et al.~\cite{ACNS:GonRaf16} modify Groth and Lu's proof of correctness of a shuffle \cite{AC:GroLu07} to get rid of the permutation pairing assumption. They showed that the statement ``$[\vecb{z}_1],\ldots,[\vecb{z}_m]$ is a permutation of $[\vecb{a}_1],\ldots,[\vecb{a}_m]$'' can be showed with a proof that $[\vecb{z}_1],\ldots,[\vecb{z}_m]\in\{[\vecb{a}_1],\ldots,[\vecb{a}_m]\}$ and a proof that $\sum_{i=1}^m [\vecb{z}_i]=\sum_{i=1}^m [\vecb{a}_i]$.  Gonzalez et al.~construct a $\Theta(m)$ proof that $[\vecb{z}_1],\ldots,[\vecb{z}_m]\in\{[\vecb{a}_1],\ldots,[\vecb{a}_m]\}$ under standard assumptions (DLin in symmetric groups)  and also noted that finding an element on the kernel of $\matr{A}$ is harder than DLin if $\vecb{a}_1,\ldots,\vecb{a}_m\gets\Z_q^2$.
+\subsubsection{Getting rid of the non-standard assumptions.} Gonzalez et al.~\cite{ACNS:GonRaf16} modify Groth and Lu's proof of correctness of a shuffle \cite{AC:GroLu07} to get rid of the permutation pairing assumption. They showed that the statement ``$[\vecb{z}_1],\ldots,[\vecb{z}_m]$ is a permutation of $[\vecb{a}_1],\ldots,[\vecb{a}_m]$'', i.e.~$\{[\vecb{a}_1],\ldots,[\vecb{a}_m]\}=\{[\vecb{z}_1],\ldots,[\vecb{z}_m]\}$, can be showed with a proof that $[\vecb{z}_1],\ldots,[\vecb{z}_m]\in\{[\vecb{a}_1],\ldots,[\vecb{a}_m]\}$ and a proof that $\sum_{i=1}^m [\vecb{z}_i]=\sum_{i=1}^m [\vecb{a}_i]$.  Gonzalez et al.~construct a $\Theta(m)$ proof that $[\vecb{z}_1],\ldots,[\vecb{z}_m]\in\{[\vecb{a}_1],\ldots\allowbreak,[\vecb{a}_m]\}$ under standard assumptions (DLin in symmetric groups)  and also noted that finding an element on the kernel of $\matr{A}$ is harder than DLin if $\vecb{a}_1,\ldots,\vecb{a}_m\gets\Z_q^2$.
 
-If we use Gonzalez et al.'s techniques we would have to show that $[\vecb{z}_1],\ldots,\allowbreak [\vecb{z}_m]\in\{[\vecb{a}_{1,j_\alpha,k_\alpha}],\ldots,[\vecb{a}_{m,j_\alpha,k_\alpha}]\}$. However, since we can't reveal $j_\alpha,k_\alpha$, we need to commit to $\{[\vecb{a}_{1,j_\alpha,k_\alpha}],\ldots,[\vecb{a}_{m,j_\alpha,k_\alpha}]\}$ and show that they are appropriately computed, which requires at least $\Omega(m^2)$ group elements.
-
-We note that we are using features of the permutation pairing assumption that where ignored by Gonzalez et al.~and by Groth and Lu. Intuitively, we are using the fact that $\sum_{i=1}^m [\vecb{a}_{i,j_\alpha,k_\alpha}]$ ``defines'' the set $S_{j_\alpha,k_\alpha}:=\{[\vecb{a}_{1,j_\alpha,k_\alpha}],\ldots,[\vecb{a}_{m,j_\alpha,k_\alpha}]\}$ in the sense that is all what we need to show membership in $S_{j_\alpha,k_\alpha}$. This feature allows us to select $S_{j_\alpha,k_\alpha}$ from $S$ using only $\Theta(\sqrt[3]{n})$ group elements.
-
-% TODO: chachar bien lo del deja-q
-%Chase and Meiklejohn constructed a framework for reducing the security of many $q$-type assumptions to the subgroup hiding assumption over composite order bilinear groups. The pairing fIf you are not willing to do it, let me know in the next few days.
-
+If we use Gonzalez et al.'s techniques we would have to show that for all $[\vecb{a}']\in A',$ $[\vecb{a}']\in A_ \mu$. However, we can't do this since $A_\mu$ is unknown to the verifier. Instead, we are using features of the permutation pairing assumption that where ignored by Gonzalez et al.~and by Groth and Lu. Indeed, the permutation pairing assumption allows to prove that given $h(A_\mu)$ is infeasible to compute a preimage different than $A_\mu$. We use this fact to commit to $A_\mu$ using a constant number of group elements, while still being able to prove that $A'=A_\mu$%\footnote{We can also see this fact as a group to group length-reducing and computationally binding commitment, which are known to not exists \cite{}} 
 
 \subsubsection{Relation to \cite{AC:GonHevRaf15}.}
 Our construction is similar to the set membership proof of Gonzalez et al.~{\cite[Appendix D.2]{AC:GonHevRaf15}. However, the proof system from \cite{AC:GonHevRaf15} does not suffice for constructing a ring signature because there the CRS is fixed to a specific set and thus, the resulting ring signature will be fixed to a specific ring. 
